[Fear]: bean validation & jwt 라이브러리 추가

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,11 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	//bean validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	//jwt
+	implementation "io.jsonwebtoken:jjwt:0.9.1"
 }
 def querydslDir = "$buildDir/generated/querydsl" //QueryDSL로 생성된 소스가 저장되는 위치
 
