--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,6 +19,9 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
+jwt:
+  secret: "b9ba6041-9927-4bf8-9bfa-fdaf95ae5a9b"
 ---
 spring:
   config:
@@ -38,3 +41,7 @@ spring:
         format_sql: true
         show_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
+
+
+jwt:
+  secret: "b9ba6041-9927-4bf8-9bfa-fdaf95ae5a9b"
