--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//junit5
+	testImplementation 'org.junit.jupiter:junit-jupiter-api'
 
 	//querydsl
 	implementation 'com.querydsl:querydsl-jpa:5.0.0'
