--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -73,3 +73,28 @@ jwt:
   secret: "b9ba6041-9927-4bf8-9bfa-fdaf95ae5a9b"
   access-token-expire-time: 1800000 # 30 minutes
   refresh-token-expire-time: 2592000000 # 30 days
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+  datasource:
+    url: jdbc:mysql://${DB_URL:localhost}:${DB_PORT:5432}/${DB_NAME:mysql_db}
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:root}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: false
+        show_sql: false
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
+
+jwt:
+  secret: ${JWT_SECRET:b9ba6041-9927-4bf8-9bfa-fdaf95ae5a9b}
+  access-token-expire-time: 1800000 # 30 minutes
+  refresh-token-expire-time: 2592000000 # 30 days
