--- a/.github/workflows/libaray-app-build-and-push.yml
+++ b/.github/workflows/libaray-app-build-and-push.yml
@@ -36,6 +36,6 @@ jobs:
         file: ./Dockerfile
         # Dockerfile의 경로입니다.
         push: true  # 이미지를 레지스트리에 푸시합니다.
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/leafy-backend:${{ github.sha }}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/library-app-backend:${{ github.sha }}
         platforms: linux/amd64,linux/arm64
         # macOS에서도 빌드할 수 있도록 플랫폼을 추가합니다.
