--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,8 +9,6 @@ spring: # test profile
       ddl-auto: create
     properties:
       hibernate:
-        format_sql: true
-        show_sql: true
         dialect: org.hibernate.dialect.H2Dialect
   h2:
     console:
@@ -36,13 +34,17 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        format_sql: true
-        show_sql: true
         dialect: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
       path: /h2-console
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug
+        type: trace
 
 jwt:
   secret: "b9ba6041-9927-4bf8-9bfa-fdaf95ae5a9b"
@@ -64,8 +66,6 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        format_sql: false
-        show_sql: false
         dialect: org.hibernate.dialect.MySQL8Dialect
 
 
@@ -89,8 +89,6 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        format_sql: false
-        show_sql: false
         dialect: org.hibernate.dialect.MySQL8Dialect
 
 
